<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:background="@color/alignment_canvasBackground"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.alignmentActivities.FineAlignmentActivity"
    tools:showIn="@layout/app_bar_fine__aligment_">

    <apps.radwin.wintouch.canvasRelated.FineAlignmentView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/fineAlignmentWidget" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/fine_alignment_main_headline"
        android:gravity="center"
        android:textColor="@color/alignementWhite"
        android:textSize="25dp"
        android:id="@+id/textView26"
        android:layout_marginTop="60dp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/fine_alignment_secondary_headline"
        android:gravity="center"
        android:textColor="@color/alignment_canvasOutline"
        android:textSize="15dp"
        android:id="@+id/textView267"
        android:layout_below="@+id/textView26"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/noLink_default_fineAlignment"
        android:textColor="@color/fabBuuttonAlignementColor"
        android:textSize="18dp"
        android:id="@+id/textView268"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="20dp"/>

</RelativeLayout>
