<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#fdfdff"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="apps.radwin.wintouch.activities.alignmentActivities.Connect_To_Wif_iActivity"
    tools:showIn="@layout/app_bar_connect__to__wif_i">

    <View
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:id="@+id/headerGreyView"
        android:background="@color/alignment_canvasShading_light"
        >
    </View>

    <View
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@+id/headerGreyView"
        android:id="@+id/errorBackgroundView"
        android:background="@color/mainAlignementColor"
        ></View>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect_to_wifi_acitivity_mainText_initlize"
        android:textSize="25dp"
        android:textColor="@color/hardBlack"
        android:gravity="center"
        android:id="@+id/connectToWifiActivity_mainText"
        android:layout_marginTop="130dp"
        android:layout_centerHorizontal="true" />

    <ProgressBar
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/connectToWifiAcitivity_prograsBar"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/connectToWifiAcitivity_ImageView"
        android:src="@drawable/wifi_error_icon"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        />




    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/connect_to_wifi_layout_buttonText"
        android:background="@color/fabBuuttonAlignementColor"
        android:textColor="@color/white"
        android:id="@+id/connectToWifiAcitivity_connectManualyButton"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="110dp"
        android:layout_centerHorizontal="true" />


    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/connectToWifi_Sscreen_try_again_buttonText"
        android:background="@color/fabBuuttonAlignementColor"
        android:textColor="@color/white"
        android:id="@+id/connectToWifiAcitivity_reconnectButton"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:layout_centerHorizontal="true"/>




</RelativeLayout>
