<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="apps.radwin.wintouch.activities.alignmentActivities.WorkorderSetSettings"
    tools:showIn="@layout/app_bar_workorder_set_settings">


    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/upperLayout"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Available bands"
            android:textColor="@color/half_black"
            android:textSize="15dp"
            android:layout_marginTop="15dp"
            android:id="@+id/textView3"
            />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:id="@+id/workorderSettings_avilableBands_spinner"
            android:prompt="@string/workorderSettings_layout_bandSpinner_headline"
            android:layout_below="@+id/textView3"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Channel bandwidth"
            android:textColor="@color/half_black"
            android:textSize="15dp"
            android:layout_marginTop="10dp"
            android:id="@+id/textView4"
            android:layout_below="@+id/workorderSettings_avilableBands_spinner"
            android:layout_alignParentStart="true" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:prompt="@string/workorderSettings_layout_bandSpinner_headline"
            android:id="@+id/workorderSettings_avilableBandWidths_spinner"
            android:layout_below="@+id/textView4"
            android:layout_centerHorizontal="true" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Frequencies"
            android:textColor="@color/half_black"
            android:layout_marginTop="20dp"
            android:textSize="15dp"
            android:id="@+id/textView5"
            android:layout_below="@+id/workorderSettings_avilableBandWidths_spinner"
            android:layout_alignParentStart="true" />


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:text="@string/workorderSettings_layout_buttonText"
            android:textColor="@color/hardBlack"
            android:id="@+id/workorderSettings_frequency_button"
            android:layout_below="@+id/textView5"
            android:layout_centerHorizontal="true" />


    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_below="@+id/upperLayout"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Scan All"
            android:textColor="@color/half_black"
            android:textSize="15dp"
            android:layout_marginTop="30dp"
            android:id="@+id/scanall_text"
            android:layout_alignParentStart="true" />

        <CheckBox
            android:layout_width="wrap_content"
            android:id="@+id/checkBox_set_settings"
            android:layout_marginLeft="10dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-5dp"
            android:layout_toEndOf="@+id/scanall_text"
            android:layout_alignBottom="@+id/scanall_text"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Required throughput"
            android:textColor="@color/half_black"
            android:textSize="15dp"
            android:layout_marginTop="20dp"
            android:id="@+id/textView18"

            android:layout_centerVertical="true" />





        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Set as default"
            android:id="@+id/workorderSetSettings_setAsDefault_text"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="20dp"
            android:layout_above="@+id/continueButtonWorkorder" />

        <CheckBox
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:id="@+id/workorderSetSettings_setAsDefault_checkBox"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/workorderSetSettings_setAsDefault_text"
            android:layout_alignBottom="@+id/workorderSetSettings_setAsDefault_text" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/fabBuuttonAlignementColor"
            android:text="CONTINUE"
            android:textColor="@color/white"
            android:id="@+id/continueButtonWorkorder"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />


        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_below="@+id/textView18"
            android:src="@drawable/truuput_down"
            android:layout_marginLeft="10dp"
            android:id="@+id/imageicontrueputdown"
            android:layout_marginTop="10dp"
            />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/truuput_up"
            android:layout_marginLeft="10dp"
            android:id="@+id/imageicontrueputup"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@+id/workorderSettings_trueputUpown_editText"
            android:layout_alignBottom="@+id/workorderSettings_trueputUpown_editText"
            />

        <EditText
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_marginTop="10dp"
            android:hint="T-put Down"
            android:ems="4"
            android:maxLength="4"
            android:layout_marginLeft="10dp"
            android:id="@+id/workorderSettings_trueputUpown_editText"
            android:layout_alignBottom="@+id/imageicontrueputdown"
            android:layout_toRightOf="@+id/imageicontrueputdown" />

        <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="T-put Up"
            android:ems="4"
            android:maxLength="4"
            android:id="@+id/workorderSettings_trueputUp_editText"
            android:layout_marginLeft="10dp"
            android:layout_alignBottom="@+id/imageicontrueputup"
            android:layout_toRightOf="@+id/imageicontrueputup" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Service type"
            android:textColor="@color/half_black"
            android:textSize="15dp"
            android:layout_marginTop="30dp"
            android:id="@+id/textView15"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/scanall_text" />


        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:entries="@array/addNewProject_layout_serviceType_list"
            android:prompt="@string/addNewProject_layout_serviceType"
            android:id="@+id/workorderSettings_bestEffort_spinner"
            android:layout_below="@+id/textView15"
            android:layout_centerHorizontal="true" />


    </RelativeLayout>






    />

</RelativeLayout>
